force-app/main/default/objects/Case/fields/Baby__c.field-meta.xml
<CustomField>
    <fullName>Baby__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Baby</label>
    <referenceTo>Baby__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>