force-app/main/default/objects/Case/fields/CFACE__Archived_Count__c.field-meta.xml
<CustomField>
    <fullName>CFACE__Archived_Count__c</fullName>
    <label>Archived Count</label>
    <summaryForeignKey>CFACE__Archived__c.CFACE__Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>