force-app/main/default/objects/Case/fields/CFACE__Is_Archived__c.field-meta.xml
<CustomField>
    <fullName>CFACE__Is_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field indicate whether the case emails Archived or not .</description>
    <label>Is Archived</label>
    <type>Checkbox</type>
</CustomField>