force-app/main/default/objects/Case/fields/Cord_Blood_Order__c.field-meta.xml
<CustomField>
    <fullName>Cord_Blood_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>not sure this is being used; may be able to delete</description>
    <label>Cord Blood Order</label>
    <referenceTo>fw1__Invoice__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>