force-app/main/default/objects/Case/fields/Lab__c.field-meta.xml
<CustomField>
    <fullName>Lab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>is this being used? may be able to delete</description>
    <label>Lab</label>
    <referenceTo>Lab__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>