force-app/main/default/objects/Case/fields/n2de__Distribution_count__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distribution_count__c</fullName>
    <description>The number of times this record has been assigned via Distribution Engine</description>
    <inlineHelpText>The number of times this record has been assigned via Distribution Engine</inlineHelpText>
    <label>Distribution count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>