force-app/main/default/objects/Case/fields/n2de__Last_archive_date__c.field-meta.xml
<CustomField>
    <fullName>n2de__Last_archive_date__c</fullName>
    <label>Last archive date</label>
    <type>DateTime</type>
</CustomField>