force-app/main/default/objects/Case/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kit delivery inquiry</fullName>
            </value>
            <value>
                <fullName>Wrong/different shipping address</fullName>
            </value>
            <value>
                <fullName>Pickup request</fullName>
            </value>
            <value>
                <fullName>Status of pickup</fullName>
            </value>
            <value>
                <fullName>How to pack collection</fullName>
            </value>
            <value>
                <fullName>Update/change credit card</fullName>
            </value>
            <value>
                <fullName>Pay off balance</fullName>
            </value>
            <value>
                <fullName>Change payment plan</fullName>
            </value>
            <value>
                <fullName>Billing error</fullName>
            </value>
            <value>
                <fullName>Doctor Reimbursement</fullName>
            </value>
            <value>
                <fullName>Baby&apos;s name</fullName>
            </value>
            <value>
                <fullName>Request certificate</fullName>
            </value>
            <value>
                <fullName>Request hard copy</fullName>
            </value>
            <value>
                <fullName>Portal access</fullName>
            </value>
            <value>
                <fullName>Address change</fullName>
            </value>
            <value>
                <fullName>Did not receive Docusign</fullName>
            </value>
            <value>
                <fullName>Technical issue with Docusign</fullName>
            </value>
            <value>
                <fullName>Stop Docusign reminder emails</fullName>
            </value>
            <value>
                <fullName>Cancel order</fullName>
            </value>
            <value>
                <fullName>Return unused kit</fullName>
            </value>
            <value>
                <fullName>Using stored stem cells</fullName>
            </value>
            <value>
                <fullName>Lab requested information</fullName>
            </value>
            <value>
                <fullName>Storage verification</fullName>
            </value>
            <value>
                <fullName>Status of stem cell storage</fullName>
            </value>
            <value>
                <fullName>Maternal blood draw</fullName>
            </value>
            <value>
                <fullName>Missing paperwork</fullName>
            </value>
            <value>
                <fullName>Pre-enrollment</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Not client/case related</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>