force-app/main/default/objects/Case/fields/TVA_CFB__Cloud_File_Size__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Cloud_File_Size__c</fullName>
    <label>Cloud File Size</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>