force-app/main/default/objects/Case/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andwin</fullName>
            </value>
            <value>
                <fullName>AnswerConnect</fullName>
            </value>
            <value>
                <fullName>FedEx - Courier</fullName>
            </value>
            <value>
                <fullName>Quick - Courier</fullName>
            </value>
            <value>
                <fullName>Quick - Warehouse</fullName>
            </value>
            <value>
                <fullName>Uber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>