force-app/main/default/objects/Case/listViews/CFACE__Archived_Cases.listView-meta.xml
<ListView>
    <fullName>CFACE__Archived_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CFACE__Is_Archived__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Archived Cases</label>
</ListView>