force-app/main/default/objects/Case/listViews/Closed_Cases.listView-meta.xml
<ListView>
    <fullName>Closed_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>CASES.TYPE</columns>
    <columns>Reason__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Cord_Blood_Order__c</columns>
    <columns>Lab__c</columns>
    <columns>Baby__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.REASON</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Closed Cases</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>